--- a/Bubble1.html
+++ b/Bubble1.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Winter Tree</title>
+    <title>Bubbles</title>
     <!-- Google Adsense -->
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- AutoResponse -->
