--- a/Bubble1.html
+++ b/Bubble1.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <!-- // Bubbles -->
-		<canvas id="cnv" width="800" height="600" style="border:1px solid #73AD21;border-radius:10px;position:fixed;top:0px;left:0px;">CANVAS NOT SUPPORTED</canvas>
+    <canvas id="cnv" width="800" height="600" style="border:1px solid #73AD21;border-radius:10px;">CANVAS NOT SUPPORTED</canvas>
 		
   </body>
   <script>
