--- a/Bubble2.html
+++ b/Bubble2.html
@@ -43,7 +43,7 @@
           new _bubble(
             Math.random() * cnv_w, 
             Math.random() * cnv_h,
-            Math.min(cnv_w, cnv_h) / 20,
+            Math.random() * Math.max(cnv_w, cnv_h),
             Math.random() * 12 - 6,
             Math.random() * 12 - 6
             )
