--- a/Bubble2.html
+++ b/Bubble2.html
@@ -73,29 +73,7 @@
         ctx.arc(b.cx, b.cy, b.r, 0, 2 * Math.PI);
         ctx.fill();
         
-        // collision
-        for (var j = i + 1; j < bubbles.length; j++) {
-          var b2 = bubbles[j];
-          var nCx1 = b.cx + b.dx;
-          var nCy1 = b.cy + b.dy;
-          var nCx2 = b2.cx + b2.dx;
-          var nCy2 = b2.cy + b2.dy;
-          var d_sqr = (nCx2 - nCx1)*(nCx2 - nCx1) + (nCy2 - nCy1)*(nCy2 - nCy1);
-          var d_chk = (b.r + b2.r)*(b.r + b2.r); 
-          if (d_sqr < d_chk) {
-            var tmp = b.dx + 0;
-            b.dx = b2.dx;
-            b2.dx = tmp;
-            tmp = b.dy + 0;
-            b.dy = b2.dy;
-            b2.dy = tmp;
-            if (++b.color >= colors.length) b.color = 0;
-            if (++b2.color >= colors.length) b2.color = 0;
-          }
-          if (d_sqr < (d_chk / 4)) {
-            if (b.cx < b2.cx)  {b.cx -= b.r; b2.cx += b2.r;} else {b2.cx -= b2.r; b.cx += b.r;}   
-          }
-        }
+        // bounce
         if ((b.cx + b.dx) < 0 || (b.cx + b.dx) >=  cnv_w) b.dx *= -1;
         if ((b.cy + b.dy) < 0 || (b.cy + b.dy) >=  cnv_h) b.dy *= -1;
         b.cx += b.dx;
