--- a/Bubble2.html
+++ b/Bubble2.html
@@ -23,7 +23,7 @@
     // Bubbles
     var c = document.getElementById("cnv");
     var ctx = c.getContext("2d");
-    
+    ctx.globalCompositeOperation = "saturation";
     var colors = ["red", "orange", "yellow", "green", "blue", "indigo", "purple"];
     function _bubble(cx, cy, r, dx, dy) {
       this.cx = cx;
