--- a/Bubble2.html
+++ b/Bubble2.html
@@ -31,7 +31,7 @@
       this.r = r;
       this.dx = dx;
       this.dy = dy;
-      this.color = Math.random() * colors.length;
+      this.color = parseInt(Math.random() * colors.length);
     }
     
     var bubbles = [];
