--- a/Bubble2.html
+++ b/Bubble2.html
@@ -23,7 +23,9 @@
     // Bubbles
     var c = document.getElementById("cnv");
     var ctx = c.getContext("2d");
+    console.log(0);
     ctx.globalCompositeOperation = "saturation";
+	  console.log(1);
     var colors = ["red", "orange", "yellow", "green", "blue", "indigo", "purple"];
     function _bubble(cx, cy, r, dx, dy, c) {
       this.cx = cx;
@@ -52,6 +54,7 @@
     }
     
     function frame() {
+      console.log(2);
       // clear
       ctx.beginPath();
       ctx.fillStyle="#fcfcfc";
@@ -59,6 +62,7 @@
       ctx.fill();
 
       for (var i = 0; i < bubbles.length; i++) {
+        console.log(3);
         var b = bubbles[i];
 
         // draw
