--- a/Bubble2.html
+++ b/Bubble2.html
@@ -24,7 +24,7 @@
     var c = document.getElementById("cnv");
     var ctx = c.getContext("2d");
     console.log(0);
-    ctx.globalCompositeOperation = "saturation";
+    //ctx.globalCompositeOperation = "saturation";
 	  console.log(1);
     var colors = ["red", "orange", "yellow", "green", "blue", "indigo", "purple"];
     function _bubble(cx, cy, r, dx, dy, c) {
