--- a/Bubble2.html
+++ b/Bubble2.html
@@ -62,7 +62,7 @@
         var b = bubbles[i];
 
         // draw
-        ctx.globalCompositeOperation = "saturation";
+        ctx.globalCompositeOperation = "soft-light";
         ctx.beginPath();
         //ctx.globalAlpha = 0.8;
         const g = ctx.createRadialGradient(
