--- a/Bubble2.html
+++ b/Bubble2.html
@@ -71,7 +71,7 @@
           b.cx, b.cy, b.r * 0.1, b.cx, b.cy, b.r
         );
         g.addColorStop(0, colors[b.color]);
-        g.addColorStop(1, 'transparent');
+        g.addColorStop(1, 'white');
 
         ctx.fillStyle = g;
         ctx.arc(b.cx, b.cy, b.r, 0, 2 * Math.PI);
