--- a/Bubble2.html
+++ b/Bubble2.html
@@ -52,11 +52,11 @@
     
     function frame() {
       // clear
-      //ctx.globalCompositeOperation = 'source-over';
-      //ctx.beginPath();
-      //ctx.fillStyle="#fcfcfc";
-      //ctx.rect(0, 0, cnv_w, cnv_h);
-      //ctx.fill();
+      ctx.globalCompositeOperation = 'source-over';
+      ctx.beginPath();
+      ctx.fillStyle="#fcfcfc";
+      ctx.rect(0, 0, cnv_w, cnv_h);
+      ctx.fill();
 
       for (var i = 0; i < bubbles.length; i++) {
         console.log(3);
