--- a/Bubble2.html
+++ b/Bubble2.html
@@ -68,7 +68,7 @@
 
         // draw
         //ctx.globalCompositeOperation = "saturation";
-        ctx.globalCompositeOperation = "color";
+        ctx.globalCompositeOperation = "lighter";
         ctx.beginPath();
         //ctx.globalAlpha = 0.8;
         const g = ctx.createRadialGradient(
