--- a/Bubble2.html
+++ b/Bubble2.html
@@ -51,10 +51,10 @@
     }
     
     function frame() {
-      // clear
+      /*// clear
       ctx.globalCompositeOperation = 'source-over';
       ctx.fillStyle = "rgba(0, 0, 0, 0.05)";
-      ctx.fillRect(0, 0, cnv_w, cnv_h);
+      ctx.fillRect(0, 0, cnv_w, cnv_h);*/
       
       /*ctx.globalCompositeOperation = 'multiply';
       ctx.beginPath();
