--- a/Bubble2.html
+++ b/Bubble2.html
@@ -42,7 +42,7 @@
         new _bubble(
           Math.random() * cnv_w, 
           Math.random() * cnv_h,
-          Math.random() * Math.min(cnv_w, cnv_h),
+          Math.random() * Math.min(cnv_w, cnv_h) * 0.5 + Math.min(cnv_w, cnv_h) * 0.5,
           Math.random() * 12 - 6,
           Math.random() * 12 - 6,
           parseInt(Math.random() * colors.length)
