--- a/Bubble2.html
+++ b/Bubble2.html
@@ -43,9 +43,9 @@
           Math.random() * cnv_w, 
           Math.random() * cnv_h,
           Math.random() * Math.min(cnv_w, cnv_h) * 0.5 + Math.min(cnv_w, cnv_h) * 0.5,
-          Math.random() * 12 - 6,
-          Math.random() * 12 - 6,
-          parseInt(Math.random() * colors.length)
+          ((Math.random() < 0.5)?-1:1) * (Math.random() * 10 + 5),
+          ((Math.random() < 0.5)?-1:1) * (Math.random() * 10 + 5),
+          "" + parseInt(Math.random() * 255) + "," + parseInt(Math.random() * 255) + "," + parseInt(Math.random() * 255);
         )
       );
     }
@@ -68,8 +68,8 @@
         const g = ctx.createRadialGradient(
           b.cx, b.cy, b.r * 0.1, b.cx, b.cy, b.r
         );
-        g.addColorStop(0, "rgba(" + colors[b.color] + ",1)");
-        g.addColorStop(1, "rgba(" + colors[b.color] + ",0)");
+        g.addColorStop(0, "rgba(" + b.c + ",1)");
+        g.addColorStop(1, "rgba(" + b.c + ",0)");
 
         ctx.fillStyle = g;
         ctx.arc(b.cx, b.cy, b.r, 0, 2 * Math.PI);
