--- a/Bubble2.html
+++ b/Bubble2.html
@@ -45,7 +45,7 @@
           Math.random() * Math.min(cnv_w, cnv_h) * 0.5 + Math.min(cnv_w, cnv_h) * 0.5,
           ((Math.random() < 0.5)?-1:1) * (Math.random() * 10 + 5),
           ((Math.random() < 0.5)?-1:1) * (Math.random() * 10 + 5),
-          "" + parseInt(Math.random() * 255) + "," + parseInt(Math.random() * 255) + "," + parseInt(Math.random() * 255);
+          "" + parseInt(Math.random() * 255) + "," + parseInt(Math.random() * 255) + "," + parseInt(Math.random() * 255)
         )
       );
     }
