--- a/Bubble2.html
+++ b/Bubble2.html
@@ -68,8 +68,8 @@
         const g = ctx.createRadialGradient(
           b.cx, b.cy, b.r * 0.1, b.cx, b.cy, b.r
         );
-        g.addColorStop(0, "rgba(" + b.c + ",1)");
-        g.addColorStop(1, "rgba(" + b.c + ",0)");
+        g.addColorStop(0, "rgba(" + b.color + ",1)");
+        g.addColorStop(1, "rgba(" + b.color + ",0)");
 
         ctx.fillStyle = g;
         ctx.arc(b.cx, b.cy, b.r, 0, 2 * Math.PI);
