--- a/Bubble2.html
+++ b/Bubble2.html
@@ -37,7 +37,7 @@
     }
     
     var bubbles = [];
-    var cnt = 5;
+    var cnt = 3 + Math.Random() * 10;
     var cnv_w = ctx.canvas.width;
     var cnv_h = ctx.canvas.height;
     for (var i = 0; i < cnt; i++) {
