--- a/Bubble1.html
+++ b/Bubble1.html
@@ -25,14 +25,13 @@
     var ctx = c.getContext("2d");
     
     var colors = ["red", "orange", "yellow", "green", "blue", "indigo", "purple"];
-    function _bubble(consonant, cx, cy, r, dx, dy, size) {
+    function _bubble(consonant, cx, cy, r, dx, dy) {
       this.consonant = consonant;
       this.cx = cx;
       this.cy = cy;
       this.r = r;
       this.dx = dx;
       this.dy = dy;
-      this.size = size;
       this.color = 0;
     }
     
@@ -46,7 +45,7 @@
           "ㄱㄴㄷㄹㅁㅂㅅㅇㅈㅊㅋㅌㅍㅎ"[Math.random() * 14)],
           Math.random() * cnv_w, 
           Math.random() * cnv_h,
-          Math.min(cnv_w, cnv_h) / 10 * (1 + Math.random()),
+          Math.min(cnv_w, cnv_h) / 20 * (1 + Math.random()),
           (Math.random() - 0.5) * Math.min(cnv_w, cnv_h) / 20,
           (Math.random() - 0.5) * Math.min(cnv_w, cnv_h) / 20
         )
@@ -77,7 +76,7 @@
           ctx.strokeStyle=colors[b.color];
           //ctx.arc(b.cx, b.cy, b.r, 0, 2 * Math.PI);
           //ctx.stroke();
-          ctx.font = b.r + "px Comic Sans MS";
+          ctx.font = (2 * b.r) + "px Comic Sans MS";
           //ctx.fillStyle = "red";
           ctx.textAlign = "center";
           ctx.strokeText("ㅋ", b.cx, b.cy);
