--- a/Bubble1.html
+++ b/Bubble1.html
@@ -42,7 +42,7 @@
     for (var i = 0; i < cnt; i++) {
       bubbles.push( 
         new _bubble(
-          "ㄱㄴㄷㄹㅁㅂㅅㅇㅈㅊㅋㅌㅍㅎ"[Math.random() * 14)],
+          "ㄱㄴㄷㄹㅁㅂㅅㅇㅈㅊㅋㅌㅍㅎ"[Math.random() * 14],
           Math.random() * cnv_w, 
           Math.random() * cnv_h,
           Math.min(cnv_w, cnv_h) / 20 * (1 + Math.random()),
