--- a/Bubble1.html
+++ b/Bubble1.html
@@ -79,7 +79,7 @@
           ctx.font = (2 * b.r) + "px Comic Sans MS";
           //ctx.fillStyle = "red";
           ctx.textAlign = "center";
-          ctx.strokeText("ㅋ", b.cx, b.cy);
+          ctx.strokeText(b.consonant, b.cx, b.cy);
 
 
 
