--- a/Bubble1.html
+++ b/Bubble1.html
@@ -49,7 +49,7 @@
           Math.min(cnv_w, cnv_h) / 20 * (1 + Math.random()),
           (Math.random() - 0.5) * Math.min(cnv_w, cnv_h) / 20,
           (Math.random() - 0.5) * Math.min(cnv_w, cnv_h) / 20,
-          (Math.random() >= 0.5) ? "fill" : "stroke";
+          (Math.random() >= 0.5) ? "fill" : "stroke"
         )
       );
     }
