Update and rename Bubble1.html to HanguelBounce.html

--- a/HanguelBounce.html
+++ b/HanguelBounce.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Bubbles</title>
+    <title>HanguelBounce</title>
     <!-- Google Adsense -->
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- AutoResponse -->
